# WINDRsustFrontend

./: .gitignore  Cargo.toml  Trunk.toml  build.sh  index.html  input.css  package-lock.json  tailwind.config.js
src/: app.rs  blockchain.rs  config.rs  main.rs  state.rs  subgraph.rs  wallet.rs
src/components/: header.rs  mod.rs  pools.rs  portfolio.rs  swap.rs  toast.rs  token_selector.rs  vote.rs
